flicker issue after click on eye

--- a/src/app/shared/components/head-user-bar/head-user-bar.component.scss
+++ b/src/app/shared/components/head-user-bar/head-user-bar.component.scss
@@ -50,7 +50,7 @@ ion-modal #select-mode {
     font-weight: 400;
     line-height: 100%; /* 20px */
     letter-spacing: -0.22px;
-    text-align: center;
+    text-align: left;
   }
 
   .head {
@@ -113,7 +113,7 @@ ion-modal #select-mode {
     font-weight: 400;
   }
 
-  #tab-card {
+  .tab-card {
     border-radius: 16px;
     border: 1px solid #9fa7b2;
     box-shadow: 2px 2px 5px 2px rgba(53, 122, 248, 0.1);
